--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^5.4.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
